add README to dynamodb-standalone example (#18)
* add README to dynamodb-standalone example

also:
- add some comment in code for better understanding
- add console output when running tests with gradle
- add application plugin for run with gradle

* Fix TOC in README

* Fix TOC in README 2

* restore importing from Mongock as part of example