@@ -36,7 +36,6 @@ import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -92,7 +91,7 @@ public class SuccessExecutionTest {
                 .table("test_table", TableSchema.fromBean(UserEntity.class))
                 .scan().items().stream()
                 .map(UserEntity::getPartitionKey)
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(2, rows.size());
         assertTrue(rows.contains("Pepe Pérez"));
@@ -105,11 +104,11 @@ public class SuccessExecutionTest {
         List<AuditEntryEntity> rows = enhancedClient
                 .table(DynamoDBConstants.AUDIT_LOG_TABLE_NAME, TableSchema.fromBean(AuditEntryEntity.class))
                 .scan().items().stream()
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> taskIds = rows.stream()
                 .map(AuditEntryEntity::getTaskId)
-                .collect(Collectors.toList());
+                .toList();
         assertTrue(taskIds.contains("[mongock]system-change-00001_before"));
         assertTrue(taskIds.contains("[mongock]system-change-00001"));
         assertTrue(taskIds.contains("[mongock_author]mongock-initialise-table-legacy_before"));
@@ -125,7 +124,7 @@ public class SuccessExecutionTest {
 
         List<String> classes = rows.stream()
                 .map(AuditEntryEntity::getClassName)
-                .collect(Collectors.toList());
+                .toList();
         assertTrue(classes.contains("io.mongock.runner.core.executor.system.changes.SystemChangeUnit00001"));
         assertTrue(classes.contains("io.flamingock.examples.dynamodb.standalone.mongock._1_mongockInitialiseTableLegacyChangeUnit"));
         assertTrue(classes.contains("io.flamingock.oss.driver.dynamodb.internal.mongock.MongockLocalLegacyImporterChangeUnit"));
